--- a/templates/config.j2
+++ b/templates/config.j2
@@ -1,6 +1,6 @@
 # XDG directories
 set -x XDG_CONFIG_HOME "$HOME/.config"
-{% if ansible_system == 'Darwin' %}
+{% if ansible_distribution == 'MacOSX' %}
 set -x XDG_CACHE_HOME "/Library/Caches"
 {% elif ansible_system == 'Linux' %}
 set -x XDG_CACHE_HOME "$HOME/.cache"
@@ -12,9 +12,4 @@ set -e fish_greeting
 
 if test -e "$XDG_CONFIG_HOME/localrc" 
   source "$XDG_CONFIG_HOME/localrc" 
-end 
-
-# load files sourced by dotstrap 
-if test -e "$XDG_CONFIG_HOME/dotstrap/config.fish"
-  source "$XDG_CONFIG_HOME/dotstrap/config.fish"
 end 
